fix right about section content  alignment and style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,3 +145,13 @@ hr {
     clear: both;
     margin-bottom: 50px;
 }
+
+.right-about-heading h2 {
+    text-align: right;
+
+}
+
+.right-about-heading p {
+    text-align: right;
+
+}
